<resources>
    <string name="app_name">Agile Planning Tool</string>
    <string name="basic_01">Low hanging fruit</string>
    <string name="basic_02">Piece of cake</string>
    <string name="basic_03">It ain\'t rocket science</string>
    <string name="basic_05">Peanut</string>
    <string name="basic_08">An arm and a leg</string>
    <string name="basic_13">Squeaking by</string>
    <string name="basic_20">Do not put all</string>
    <string name="basic_40">Meterse en un berenjenal</string>
    <string name="basic_100">Monster task</string>
    <string name="basic_question">Here be dragons</string>
    <string name="basic_infinity">When pigs fly</string>
    <string name="basic_shaving">Yak shaving</string>
    <string name="tshirt_xs">Extra Small</string>
    <string name="tshirt_s">Small</string>
    <string name="tshirt_m">Medium</string>
    <string name="tshirt_l">Large</string>
    <string name="tshirt_xl">Extra Large</string>
    <string name="tshirt_xxl">Double Extra Large</string>
    <string name="card_description">Poker Card</string>
    <string name="dark_theme_menu">Dark Mode</string>
    <string name="view_mode_menu">Card Layout</string>
    <string name="view_mode_grid">Grid</string>
    <string name="view_mode_swipe">Swipe</string>
    <string name="sizing_mode_menu">Planning Scheme</string>
    <string name="poker_card_sizing">Poker Card</string>
    <string name="tshirt_card_sizing">T-Shirt Size</string>
</resources>
